# Chunking-Experiment

./: _chonkie.ipynb  _chonkie.py  pyproject.toml  requirements.txt
