[project]
name = "chunking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[catsu,code,genie,neural,openai,semantic,st]>=1.7.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.2",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]
